# python-logfmt

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml  python-test.yml
logfmt/: __init__.py
tests/: test_formatting.py
